--- a/introducing-sbr/index.html
+++ b/introducing-sbr/index.html
@@ -12,10 +12,10 @@
   <meta name="description" content="" />
 
   
-  <link type="text/css" rel="stylesheet" href="https://zeyaddeeb.com/css/print.css" media="print">
-  <link type="text/css" rel="stylesheet" href="https://zeyaddeeb.com/css/poole.css">
-  <link type="text/css" rel="stylesheet" href="https://zeyaddeeb.com/css/syntax.css">
-  <link type="text/css" rel="stylesheet" href="https://zeyaddeeb.com/css/hyde.css">
+  <link type="text/css" rel="stylesheet" href="http://zeyaddeeb.com/css/print.css" media="print">
+  <link type="text/css" rel="stylesheet" href="http://zeyaddeeb.com/css/poole.css">
+  <link type="text/css" rel="stylesheet" href="http://zeyaddeeb.com/css/syntax.css">
+  <link type="text/css" rel="stylesheet" href="http://zeyaddeeb.com/css/hyde.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Abril+Fatface|PT+Sans:400,400i,700">
 
 
@@ -31,7 +31,7 @@
   <aside class="sidebar">
   <div class="container sidebar-sticky">
     <div class="sidebar-about">
-      <a href="https://zeyaddeeb.com/"><h1>Zeyad Deeb</h1></a>
+      <a href="http://zeyaddeeb.com/"><h1>Zeyad Deeb</h1></a>
       <p class="lead">
        The statistical brick road 
       </p>
@@ -39,7 +39,7 @@
 
     <nav>
       <ul class="sidebar-nav">
-        <li><a href="https://zeyaddeeb.com/">Home</a> </li>
+        <li><a href="http://zeyaddeeb.com/">Home</a> </li>
         <li><a href="https://github.com/zeyaddeeb/"> Github </a></li><li><a href="https://www.linkedin.com/in/zeyaddeeb/"> LinkedIn </a></li>
       </ul>
     </nav>
