deploy: zeyaddeeb/blog-source@62e12dba9a7a5ac6b890511623b1d003ca9cd039

--- a/about/index.html
+++ b/about/index.html
@@ -126,7 +126,8 @@ if (!doNotTrack) {
     <time>January 1, 2020</time>
     <div>
         <p>
-        
+        <p>Check me out on <a href="https://www.linkedin.com/in/zeyaddeeb">linkedin</a> while I update this page.</p>
+
         </p>
     </div>
     
