deploy: zeyaddeeb/blog-source@e617167c51c53a4301fc0995f5b60e8ffdaef275

--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@ if (!doNotTrack) {
         
         <article>
             <h2>
-                <a href="https://www.zeyaddeeb.com/posts/migrarion/">
+                <a href="https://www.zeyaddeeb.com/posts/golang-in-ml/">
                     Go, in a Machine Learning Application...
                 </a>
             </h2>
