deploy: zeyaddeeb/blog-source@bcae0dfc54ce47543d8491eacb9f8ad7b665b974

--- a/about/index.html
+++ b/about/index.html
@@ -126,7 +126,7 @@ if (!doNotTrack) {
     <time>January 1, 2020</time>
     <div>
         <p>
-        <p>Check me out on <a href="https://www.linkedin.com/in/zeyaddeeb">linkedin</a> while I update this page.</p>
+        <p>I honestly don't want to maintain this section, just check out my <a href="https://www.linkedin.com/in/zeyaddeeb">LinkedIn</a> profile.</p>
 
         </p>
     </div>
